--- a/.github/style.css
+++ b/.github/style.css
@@ -977,3 +977,281 @@ line-height: normal;
 .class {
   overflow: hidden;
 }
+
+
+.root {
+  --white: rgb(255, 255, 255);
+  --gray: rgb(202, 202, 202);
+  --black: rgb(0, 0, 0);
+  --red: rgb(235, 29, 14);
+  --blue: rgb(0, 0, 255);
+  --yellow: rgb(255, 195, 65);
+  --scale: 16px;
+  --gridSize: 40;
+  --cellMargin: 6px;
+  --offset: 12px;
+
+  margin: 0;
+  background-color: #0B141C;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.grid {
+  display: grid;
+  position: relative;
+  width: 100%;
+  max-width: calc(var(--gridSize) * var(--scale));
+  height: calc(var(--gridSize) * var(--scale));
+  grid-template-columns: repeat(auto-fit, var(--scale));
+  grid-template-rows: repeat(var(--gridSize), var(--scale));
+  grid-auto-flow: dense;
+  transition: 1s;
+  animation: intro-grid 2s;
+  overflow: hidden;
+  perspective: 640px;
+}
+
+.grid::after {
+  content: '';
+  display: block;
+  position: absolute;
+  top: var(--offset);
+  right: var(--offset);
+  bottom: var(--offset);
+  left: var(--offset);
+  background-color: var(--black);
+  z-index: -1;
+}
+
+.grid-picture {
+  margin: var(--cellMargin);
+  transform: translate3d(0, 0, 200px);
+}
+
+.grid-picture:nth-child(1) {
+  background-color: var(--gray);
+  grid-column: span 9;
+  grid-row: span 4;
+}
+
+.grid-picture:nth-child(2) {
+  background-color: var(--white);
+  grid-column: span 16;
+  grid-row: span 4;
+}
+
+.grid-picture:nth-child(3) {
+  background-color: var(--yellow);
+  grid-column: span 13;
+  grid-row: span 4;
+}
+
+.grid-picture:nth-child(4) {
+  background-color: var(--white);
+  grid-column: span 4;
+  grid-row: span 11;
+}
+
+.grid-picture:nth-child(5) {
+  background-color: var(--red);
+  grid-column: span 21;
+  grid-row: span 21;
+}
+
+.grid-picture:nth-child(6) {
+  background-color: var(--yellow);
+  grid-column: span 13;
+  grid-row: span 11;
+}
+
+.grid-picture:nth-child(7) {
+  background-color: var(--white);
+  grid-column: span 6;
+  grid-row: span 10;
+}
+
+.grid-picture:nth-child(8) {
+  background-color: var(--white);
+  grid-column: span 7;
+  grid-row: span 10;
+}
+
+.grid-picture:nth-child(9) {
+  background-color: var(--gray);
+  grid-column: span 4;
+  grid-row: span 15;
+}
+
+.grid-picture:nth-child(10) {
+  background-color: var(--black);
+  grid-column: span 8;
+  grid-row: span 10;
+}
+
+.grid-picture:nth-child(11) {
+  background-color: var(--white);
+  grid-column: span 10;
+  grid-row: span 10;
+}
+
+.grid-picture:nth-child(12) {
+  background-color: var(--white);
+  grid-column: span 13;
+  grid-row: span 10;
+}
+
+.grid-wrapper {
+  width: 100%;
+  height: 100%;
+}
+.link {
+  color: var(--color-background);
+  text-decoration: none;
+  font-size: 1.6rem;
+  transition: 0.5s ease;
+}
+.link:hover {
+  background-color: aqua;
+}
+.side {
+  padding: 2rem 1rem;
+  margin: 0;
+  list-style-type: none;
+  justify-content: center;
+  align-items: center;
+}
+.section-grid {
+  padding: 4rem 2rem;
+  margin: 0 auto;
+  max-width: 85rem;
+}
+.grid-body1 {
+  padding: 4rem 2rem;
+  margin: 0 auto;
+  max-width: 85rem;
+}
+.grid_container {
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(5, 6rem);
+  grid-template-rows: repeat(11, 3rem);
+  border-radius: 1rem;
+}
+.item {
+  border: 0.3rem solid black;
+  background-color: white;
+}
+.item1 {
+  grid-column: span 3;
+}
+.item2 {
+  grid-column: span 2;
+  background-color: yellow;
+}
+.item3 {
+  grid-column: span 3;
+  grid-row: span 8;
+  background-color: red;
+}
+.item4 {
+  grid-column: span 2;
+  grid-row: span 4;
+  background-color: yellow;
+}
+.item5 {
+  grid-row: span 4;
+  grid-column: 1.3;
+}
+.item6 {
+  grid-row: span 4;
+  grid-column: 0.7;
+}
+.item7 {
+  grid-row: span 2;
+  background-color: black;
+}
+.item8 {
+  grid-column: span 2;
+  grid-row: span 2;
+}
+.graphics {
+  display: grid;
+  grid-template-columns: repeat(6, auto);
+  grid-template-rows: repeat(3, auto);
+  margin: 0 auto;
+  grid-auto-flow: dense;
+  gap: 1rem;
+  grid-template-areas:
+    "side first first first first first first"
+    "side second second third third four four"
+    "side five five five six six six";
+}
+.main-graph {
+  background-color: var(--yellow-color);
+  height: auto;
+}
+.sigepanel {
+  grid-area: side;
+}
+.graph1 {
+  grid-area: first;
+}
+.graph2 {
+  grid-area: second;
+}
+.graph3 {
+  grid-area: third;
+}
+.graph4 {
+  grid-area: four;
+}
+.graph5 {
+  grid-area: five;
+}
+.graph6 {
+  grid-area: six;
+}
+.grid-buttons {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: 10px;
+}
+.grid-img_item {
+  display: grid;
+}
+.grid-img_item > div {
+  grid-area: 1 / 1;
+}
+.grid-img_item > .itemm1,
+.grid-img_item > .itemm2 {
+  grid-area: 1 / 1;
+}
+.gallery-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  justify-self: center;
+  align-self: center;
+}
+.link_gallery {
+  text-decoration: none;
+  background: rgba(51, 12, 206, 0.5);
+  width: 50%;
+  text-align: center;
+  color: black;
+  padding: 1rem 1rem;
+  justify-self: center;
+  align-self: center;
+
+  transition: color 0.5s ease;
+  transition: background-color 0.5s ease;
+}
+
+.link_gallery:hover {
+  color: red;
+  text-decoration: underline;
+  background-color: beige;
+}
