--- a/.github/style.css
+++ b/.github/style.css
@@ -1,20 +1,26 @@
 @font-face {
     font-family: 'Montserrat';
-    src: url('Montserrat-Medium.ttf') format('truetype'); /* формат TTF */
+    src: url('fonts/Montserrat-Medium.ttf') format('truetype'); /* формат TTF */
     /* Дополнительные форматы, если нужно */
     font-weight: 300; /* либо другие веса шрифта */
     font-style: normal; /* либо italic, oblique и т.д. */
   }
 
-@font-face {
-    font-family: 'Roboto';
-    src: url('Roboto-Black.ttf') format('truetype'); /* формат TTF */
+  @font-face {
+    font-family: 'Roboto-serif';
+    src: url('fonts/roboto-serif-v13-latin-700.woff2') format('truetype'); /* формат TTF */
     /* Дополнительные форматы, если нужно */
-    font-weight: 800; /* либо другие веса шрифта */
+    font-weight: 700; /* либо другие веса шрифта */
     font-style: normal; /* либо italic, oblique и т.д. */
   }
 
-
+  @font-face {
+    font-family: 'Roboto';
+    src: url('fonts/roboto-v30-latin-700.woff2') format('truetype'); /* формат TTF */
+    /* Дополнительные форматы, если нужно */
+    font-weight: 700; /* либо другие веса шрифта */
+    font-style: normal; /* либо italic, oblique и т.д. */
+  }
 
 * {
   box-sizing: border-box;
@@ -55,8 +61,14 @@ a {
 .button-on-gallery {
   background: #0b1219;
   border: none;
+  margin-top: 16px;
+  margin-right: 16px;
 }
 
+.logotip {
+  margin-top: 16px;
+  margin-left: 16px;
+}
 
 .other-titles {
   text-align: center;
@@ -81,7 +93,9 @@ a {
   font-style: normal;
   font-weight: 700;
   line-height: 1.22;
-  color: var(--text-color)
+  color: var(--text-color);
+  margin-top: 80px;
+  margin-bottom: 0px;
 }
 
 .second-title {
@@ -91,7 +105,9 @@ a {
   font-style: normal;
   font-weight: 500;
   line-height: 1.5;
-  color: var(--text-color)
+  color: var(--text-color);
+  margin-top: 16px;
+  margin-bottom: 0px;
 }
 
 .get-started-button {
@@ -127,7 +143,7 @@ font-family: "Roboto";
 font-size: 20px;
 font-style: normal;
 font-weight: 700;
-line-height: 36px;
+line-height: 1.8;
 color: var(--list-special);
 margin: 24px 16px 0 16px;
 padding-left: 0px;
@@ -140,6 +156,17 @@ font-style: normal;
 font-weight: 700;
 line-height: 36px;
 color: var(--second-list-special)
+}
+.third-list-special {
+  text-align: center;
+  font-family: "Roboto";
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1.8;
+  color: var(--list-special);
+  margin: 24px 16px 0 16px;
+  padding-left: 0px;
 }
 
 ul {
@@ -185,13 +212,16 @@ margin: 6px;
   font-size: 1.4rem;
   line-height: 1.15;
   list-style-type: none;
-  margin: 24px 16px;
   padding-inline: 0;
   gap: 8px;
   flex-wrap: wrap-reverse;
   align-items: center;
   justify-content: center;
   font-family: "Montserrat";
+  margin-top: 0px;
+  max-width: 338px;
+  margin: 0 auto;
+  max-height: 43px;
 }
 
 .NFT-membership {
@@ -235,7 +265,7 @@ color: var(--text-color);
 
 .help-at-every-step {
 font-family: "Roboto";
-font-size: 1.8rem;
+font-size: 2.0rem;
 font-style: normal;
 font-weight: 700;
 line-height: normal;
@@ -246,6 +276,27 @@ align-items: center;
 }
 
 .help-at-every-step-second {
+ font-family: "Roboto";
+ font-size: 1.8rem;
+ font-style: normal;
+ font-weight: 700;
+ line-height: normal;
+ color: var(--text-color);
+ text-align: left;
+}
+.help-at-every-step-secondd {
+  font-family: "Roboto";
+  font-size: 3.2rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  color: var(--text-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  display: none;
+}
+.help-at-every-step-third {
   font-family: "Roboto";
   font-size: 1.8rem;
   font-style: normal;
@@ -253,8 +304,16 @@ align-items: center;
   line-height: normal;
   color: var(--text-color);
   text-align: left;
-  }
+  display: none;
+}
+  
+.star-second {
+  display: none;
+}
 
+.star-third {
+  display: none;
+}
 
 .help-svg-blue {
 width: 13px;
@@ -362,7 +421,7 @@ height: 14px;
   color: var(--pink-for-buttons);
 text-align: center;
 font-family: "Montserrat";
-font-size: 14px;
+font-size: 1.4rem;
 font-style: normal;
 font-weight: 600;
 line-height: 16px; /* 114.286% */
@@ -373,7 +432,7 @@ line-height: 16px; /* 114.286% */
   color: var(--yellow-color);
 text-align: center;
 font-family: "Montserrat";
-font-size: 14px;
+font-size: 1.4rem;
 font-style: normal;
 font-weight: 600;
 line-height: 16px; /* 114.286% */
@@ -383,7 +442,7 @@ line-height: 16px; /* 114.286% */
   color: var(--purple);
 text-align: center;
 font-family: "Montserrat";
-font-size: 14px;
+font-size: 1.4rem;
 font-style: normal;
 font-weight: 600;
 line-height: 16px; /* 114.286% */
@@ -393,7 +452,7 @@ line-height: 16px; /* 114.286% */
   color: var(--for-table-blue);
 text-align: center;
 font-family: "Montserrat";
-font-size: 14px;
+font-size: 1.4rem;
 font-style: normal;
 font-weight: 600;
 line-height: 16px; /* 114.286% */
@@ -408,17 +467,54 @@ header {
   align-items: flex-start;
   flex-shrink: 0;
   padding: 0;
+  max-width: 400px;
+  margin: 0px auto;
 }
 
-body {
-  text-align: center;
-  margin: 0;
-  padding: 0;
+.product {
+color: #FFF;
+font-family: "Montserrat";
+font-size: 1.4rem;
+font-style: normal;
+font-weight: 600;
+line-height: normal;
+display: none;
+margin-top: 35px;
+margin-right: 24px;
+}
+
+.product-jobs {
+  color: #FFF;
+  font-family: "Montserrat";
+  font-size: 1.4rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  display: none;
+  margin-top: 35px;
+  margin-right: 128px;
+  }
+
+.login {
+color: white;
+font-family: "Montserrat";
+font-size: 1.2rem;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
+display: none;
+padding: 8px 16px;
+align-items: flex-start;
+gap: 12px;
+border-radius: 8px;
+background: #243241;
+margin-top: 28px;
+border: none;
 }
 
 .list-project {
   padding-inline: 0;
-  max-width: 306px;
+  max-width: 350px;
   display: flex;
   gap: 0.5em;
   font-size: 1.2rem;
@@ -431,7 +527,59 @@ body {
   align-items: center;
   text-align: center;
   justify-content: center;
+  margin-bottom: 20px;
 }
+
+@media screen and (min-width: 769px) {
+  header {
+    max-width: 736px;
+  }
+  .button-on-gallery {
+    display: none;
+  }
+  .login {
+    display: inline-flex;
+  }
+  .product {
+    display: inline-flex;
+  }
+  .logotip {
+    margin-top: 30.4px;
+    margin-right: 55px;
+  }
+  .product-jobs {
+    display: inline-flex;
+  }
+  .main-title {
+    margin-top: 72px;
+    font-size: 5.2rem;
+    line-height: 1.15;
+  }
+  .second-title {
+    font-size: 2.0rem;
+    line-height: 1.7;
+    margin-top: 20px;
+  }
+  .get-started-button {
+    margin-top: 44px;
+  }
+  .other-titles {
+    margin-top: 137px;
+    text-align: center;
+    font-size: 3.6rem;
+    margin-bottom: 44px;
+  }
+  .list-project {
+    margin-top: 0px
+  }
+}
+
+body {
+  text-align: center;
+  margin: 0;
+  padding: 0;
+}
+
 
 .image {
   display: flex;
@@ -439,6 +587,31 @@ body {
   border-radius: 24px;
   padding-inline: 0;
   margin-inline: auto;
+}
+
+.main-image {
+  display: flex;
+  background: #000;
+  border-radius: 24px;
+  padding-inline: 0;
+  margin-inline: auto;
+}
+
+.main-image-second {
+  display: none;
+  background: #000;
+  border-radius: 24px;
+  padding-inline: 0;
+  margin-inline: auto;
+}
+
+@media screen and (min-width: 440px) {
+  .main-image {
+    display: none;
+}
+  .main-image-second {
+    display: flex;
+}
 }
 
 .projects-launch {
@@ -475,7 +648,52 @@ body {
   margin-right: 16px;
 }
 
+.main-image-third {
+  display: none;
+  background: #000;
+  border-radius: 24px;
+  padding-inline: 0;
+  margin-inline: auto;
+}
+
 .Tools-title {
+  margin-top: 80px;
+  text-align: center;
+  font-family: "Roboto", sans-serif;
+  font-size: 2.8rem;
+  font-style: normal;
+  font-weight: 700; 
+  line-height: 1.28;
+  color: var(--text-color);
+  font-weight: 700;
+}
+
+.press {
+  margin-top: 80px;
+  text-align: center;
+  font-family: "Roboto", sans-serif;
+  font-size: 2.8rem;
+  font-style: normal;
+  font-weight: 700; 
+  line-height: 1.28;
+  color: var(--text-color);
+  font-weight: 700;
+}
+
+.press-div {
+  margin-top: 80px;
+  text-align: center;
+  font-family: "Roboto", sans-serif;
+  font-size: 2.8rem;
+  font-style: normal;
+  font-weight: 700; 
+  line-height: 1.28;
+  color: var(--text-color);
+  font-weight: 700;
+  display: none;
+}
+
+.Works-with {
   margin-top: 80px;
   text-align: center;
   font-family: "Roboto", sans-serif;
@@ -493,13 +711,41 @@ body {
   border-radius: 8px;
   padding-inline: 0;
   margin-inline: auto;
+  margin-top: 28px;
+}
+
+.imagen-second {
+  display: none;
+  background: #000;
+  border-radius: 8px;
+  padding-inline: 0;
+  margin-inline: auto;
+  margin-top: 28px;
+}
+
+.imagen-third {
+  display: none;
+  background: #000;
+  border-radius: 8px;
+  padding-inline: 0;
+  margin-inline: auto;
+  margin-top: 28px;
+}
+
+.imagen-four {
+  display: none;
+  background: #000;
+  border-radius: 8px;
+  padding-inline: 0;
+  margin-inline: auto;
+  margin-top: 28px;
 }
 
 .list-project p{
   margin: 0;
 }
 
-@media screen and (min-width: 700px) {
+@media screen and (min-width: 769px) {
   .list-project {
     max-width: 640px;
   }
@@ -539,10 +785,73 @@ align-items: flex-start;
   padding-left: 0;  
   align-items: center;
   justify-content: center;
+  margin-bottom: 0px
 }
 
+.help-step-second {
+  padding-inline: 0;
+  max-width: 700px;
+  display: none;
+  gap: 0.5em;
+  font-size: 1.2rem;
+  line-height: 1.5;
+  flex-wrap: wrap;
+  list-style-type: none;
+  margin-top: 24px;
+  margin-inline: auto;
+  padding-left: 0;  
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 100px;
+}
+
+.help-step-third {
+  padding-inline: 0;
+  max-width: 306px;
+  display: none;
+  gap: 0.5em;
+  font-size: 1.2rem;
+  line-height: 1.5;
+  flex-wrap: wrap;
+  list-style-type: none;
+  margin-top: 24px;
+  margin-inline: auto;
+  padding-left: 0;  
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 0px
+}
+
+.help-at-every-step-secondd-education {
+font-family: "Roboto";
+font-size: 3.2rem;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+color: var(--text-color);
+display: none;
+justify-content: center;
+align-items: center;
+display: none;
+margin-left: 5px;
+}
+
+.help-at-every-step-third-education {
+  font-family: "Roboto";
+  font-size: 3.2rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  color: var(--text-color);
+  display: none;
+  justify-content: center;
+  align-items: center;
+  display: none;
+  margin-left: 5px;
+  }
+
 .forma {
-margin-top: 79.5px;
+margin-top: 95.27px;
 border-radius: 22px;
 background: #14212D;
 justify-content: center;
@@ -630,18 +939,23 @@ display: block;
 
 .list-project-help {
   padding-inline: 0;
-  max-width: 306px;
+  max-width: 320px;
   display: flex;
-  gap: 0.5em;
+  gap: 0.9em;
   font-size: 1.2rem;
   line-height: 1.5;
   flex-wrap: wrap-reverse;
-  list-style-type: none;
   margin-top: 24px;
   margin-inline: auto;
   padding-left: 0;  
   align-items: center;
   justify-content: center;
+}
+
+@media screen and (min-width: 560px) {
+  .list-project-help {
+    max-width: 640px;
+  }
 }
 
 .see-all {
@@ -655,9 +969,41 @@ font-weight: 700;
 line-height: 32px;
 display: flex;
 justify-content: center;
+margin-top: 24px;
+}
+
+.see-all-in-div {
+  color: #8395A7;
+  text-align: right;
+  text-shadow: 0px 2px 25px rgba(0, 0, 0, 0.60);
+  font-family: "Montserrat";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 32px;
+  display: flex;
+  justify-content: center;
+  margin-top: 113px;
+  margin-bottom: 28px;
 }
 
 .cont {
+  border-radius: 20px;
+  border: 2px solid #2A3744;
+  background: #121E28;
+  backdrop-filter: blur(2px);
+  max-width: 400px;
+  text-align: start;
+  margin-bottom: 16px;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+}
+
+.cont-second {
   border-radius: 20px;
   border: 2px solid #2A3744;
   background: #121E28;
@@ -719,6 +1065,30 @@ margin-right: 20px;
 margin-top: 0px;
 }
 
+.josh {
+  color: #E2E2E2;
+font-family: "Montserrat";
+font-size: 1.4rem;
+font-style: normal;
+font-weight: 600;
+line-height: 20px;
+margin-left: 20px;
+margin-right: 20px;
+margin-top: 0px;
+}
+
+.andrew {
+  color: #E2E2E2;
+font-family: "Montserrat";
+font-size: 1.4rem;
+font-style: normal;
+font-weight: 600;
+line-height: 20px;
+margin-left: 20px;
+margin-right: 20px;
+margin-top: 0px;
+}
+
 .listen {
 color: #FFF;
 font-family: "Montserrat";
@@ -743,10 +1113,34 @@ background: #121E28;
 .about {
   color: #FFF;
 font-family: "Montserrat";
-font-size: 14px;
+font-size: 1.4rem;
 font-style: normal;
 font-weight: 600;
 line-height: normal;
+}
+
+.Jobs {
+  color: #FFF;
+font-family: "Montserrat";
+font-size: 1.4rem;
+font-style: normal;
+font-weight: 600;
+line-height: normal;
+margin-left: 36px;
+margin-right: 36px;
+margin-top: 47px;
+margin-bottom: 47px;
+}
+
+.Legal {
+  color: #FFF;
+font-family: "Montserrat";
+font-size: 1.4rem;
+font-style: normal;
+font-weight: 600;
+line-height: normal;
+margin-top: 47px;
+margin-bottom: 47px;
 }
 
 .list-footer {
@@ -779,12 +1173,26 @@ line-height: normal;
   margin: 0px 40px;
 }
 
+.footer-div {
+  display: none;
+}
+
 .back-list {
   display: flex;
-  margin: 32px;
+  margin: 32px 70px;
   justify-content: center;
   align-items: center;
   padding: 0;
+}
+
+.div-press {
+  display: none;
+  justify-content: space-between;
+  align-items: flex-start;
+  flex-shrink: 0;
+  padding: 0;
+  margin: 0px auto;
+  max-width: 700px;
 }
 
 .telegram {
@@ -1254,4 +1662,322 @@ line-height: normal;
   color: red;
   text-decoration: underline;
   background-color: beige;
+}
+
+
+
+
+
+
+
+@media screen and (min-width: 440px) {
+  .imagen {
+    display: none;
+  }
+  .imagen-second {
+    display: block;
+  }
+}
+
+@media screen and (min-width: 769px) {
+  .main-image-third {
+    display: flex;
+  }
+  .main-image-second {
+    display: none;
+  }
+  .projects-launch {
+    padding: 2px 20px;
+    font-size: 1.6rem;
+    line-height: 2;
+  }
+  .Design-title {
+    margin-top: 84px;
+    font-size: 3.6rem;
+  }
+  .list-special {
+    font-size: 3.2rem;
+    line-height: 1.56;
+  }
+  .second-list-special {
+    font-size: 3.2rem;
+    line-height: 1.56;
+    color: var(--list-special);
+  }
+  .third-list-special {
+    font-size: 3.2rem;
+    line-height: 1.56;
+    color: var(--second-list-special);
+    margin-top: 0px;
+  }
+  .Tools-title {
+    margin-top: 100px;
+    font-size: 3.6rem;
+    margin-bottom: 32px;
+  }
+  .Works-with {
+    margin-top: 110px;
+    font-size: 3.6rem;
+    margin-bottom: 32px;
+  }
+  .dot {
+    display: none;
+  }
+  .treasury {
+    font-size: 1.6rem;
+    line-height: 1.75;
+    margin-right: 25px;
+  }
+  .NFT-membership {
+    font-size: 1.6rem;
+    line-height: 1.75;
+    margin-right: 27px;
+  }
+  .list-all-the-tools {
+    max-width: 800px;
+    margin: 0 auto;
+    max-height: 28px;
+  }
+  .imagen-second {
+    display: none;
+  }
+  .imagen-third {
+    display: block;
+  }
+  .button-youtube {
+    margin-top: 28px;
+    padding: 10px 44px;
+    font-size: 1.7rem;
+    line-height: 1.9;
+  }
+  .emp-title {
+    margin-top: 100px;
+  }
+  .help-at-every-step {
+    display: none;
+  }
+  .help-step {
+    max-width: 740px;
+  }
+  .star-second {
+    display: block;
+  }
+  .help-at-every-step-secondd {
+    display: flex;
+  }
+  .star {
+    display: none;
+  }
+  .help-step {
+    display: none;
+  }
+  .help-step-second {
+    display: flex;
+  }
+  .help-at-every-step-secondd-education {
+    display: flex;
+  }
+  .forma {
+    margin-top: 100px;
+    max-width: 738px;
+    display: flex;
+    margin: 0 auto;
+  }
+  .Weekly-digest {
+    font-size: 3.6rem;
+    margin-bottom: 16px;
+  }
+  .news {
+    margin-top: 0px;
+    font-size: 2.8rem;
+    line-height: 1.42;
+  }
+  .divich {
+    display: flex;
+  }
+  .input-email {
+    max-width: 324px;
+    display: inline-block;
+    margin-bottom: 48px;
+    margin-right: 0px;
+    margin-left: 0px;
+    padding: 18px 190px 18px 24px;;
+  }
+  .subscribe {
+    padding: 12px 32px;
+    font-size: 2.0rem;
+    line-height: 1.8;
+    max-width: 167px;
+    display: inline-block;
+    margin-bottom: 48px;
+    margin-left: 24px;
+    margin-right: 0px
+  }
+  .another-titles {
+    margin-top: 100px;
+    font-size: 3.6rem;
+  }
+  .blue-cont {
+    max-width: 232px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-bottom: 0;
+  }
+  .purple-cont {
+    max-width: 232px;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 0;
+  }
+  .yellow-cont {
+    max-width: 232px;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-bottom: 0;
+  }
+  .superdao {
+    margin-bottom: 38px;
+  }
+  .press {
+    display: none;
+  }
+  .press-div {
+    margin-top: 100px;
+    font-size: 3.6rem;
+    margin-bottom: 28px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+  .div-press {
+    display: flex;
+  }
+  .see-all {
+    display: none;
+  }
+  .mega-contauner {
+    display: inline-flex;
+  }
+  .contauner {
+    margin: 0 auto;
+  }
+  .cont {
+    max-width: 232px;
+    max-height: 320px;
+    display: inline-block;
+    margin: 0 auto;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .cont-second {
+    max-width: 232px;
+    max-height: 320px;
+    display: inline-block;
+    margin-left: 20px;
+    margin-right: 20px;
+    flex-direction: column;
+    justify-content: center;
+    margin-bottom: 222px;
+  }
+  .anthony {
+    margin-bottom: 65px;
+  }
+  .josh {
+    margin-bottom: 17px;
+  }
+  .andrew {
+    margin-bottom: 41px;
+  }
+  .see-all-div {
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
+  .image-footer {
+    display: none;
+  }
+  .list-footer {
+    display: none;
+  }
+  .back-list {
+    display: none;
+  }
+  .footer-div {
+    display: flex;
+    justify-content: space-between;
+  }
+  .svg-div {
+    margin-top: 41px;
+    margin-bottom: 46px;
+  }
+  .twitter {
+    margin-left: 69px;
+    margin-bottom: 36px;
+    margin-top: 36px;
+  }
+  .telegram-div {
+    border-radius: 100px;
+    background: rgba(119, 149, 255, 0.15);
+    margin-left: 20px;
+    margin-right: 20px;
+    display: flex;
+    width: 40px;
+    height: 40px;
+    padding: 7px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    margin-top: 36px;
+    margin-bottom: 36px;
+    margin-left: 12px;
+    margin-right: 12px;
+  }
+  .youtube-div {
+    border-radius: 100px;
+    background: rgba(247, 135, 135, 0.15);
+    display: flex;
+    width: 40px;
+    height: 40px;
+    padding: 10px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    margin-right: 12px;
+    margin-top: 36px;
+    margin-bottom: 36px;
+  }
+  .discord-div {
+    border-radius: 100px;
+    background: rgba(146, 119, 255, 0.15);
+    display: flex;
+    width: 40px;
+    height: 40px;
+    padding: 10px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    margin-top: 36px;
+    margin-bottom: 36px;
+  }
+  .about-second {
+    color: #FFF;
+  font-family: "Montserrat";
+  font-size: 1.4rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  margin-left: 61px;
+  margin-top: 47px;
+  margin-bottom: 47px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .imagen-third {
+    display: none;
+  }
+  .imagen-four {
+    display: block;
+  }
 }
