--- a/.github/style.css
+++ b/.github/style.css
@@ -467,7 +467,7 @@ header {
 }
 
 .product {
-color: #FFF;
+color: var(--text-color);
 font-family: "Montserrat";
 font-size: 1.4rem;
 font-style: normal;
@@ -479,7 +479,7 @@ margin-right: 2.4rem;
 }
 
 .product-forma {
-  color: var(--yellow-color);
+  color: var(--text-color);
   font-family: "Montserrat";
   font-size: 1.4rem;
   font-style: normal;
@@ -1264,6 +1264,20 @@ margin-bottom: 4.7rem;
   margin: 0;
 }
 
+.list-footer-div {
+  padding-inline: 0;
+  display: flex;
+  gap: 0.5em;
+  font-size: 1.2rem;
+  line-height: 1.5;
+  flex-wrap: wrap;
+  list-style-type: none;
+  margin-inline: auto;
+  padding-left: 0;  
+  align-items: center;
+  margin: 0;
+}
+
 .image-footer {
   margin: 3.2rem 7rem;
 }
@@ -1918,6 +1932,9 @@ margin-bottom: 4.7rem;
   .list-footer {
     display: none;
   }
+  .list-footer-div {
+    display: none;
+  }
   .back-list {
     display: none;
   }
@@ -2005,6 +2022,17 @@ margin-bottom: 4.7rem;
   margin-top: 4.7rem;
   margin-bottom: 4.7rem;
   }
+  .about-second-grid-two {
+    color: var(--text-color);
+    font-family: "Montserrat";
+    font-size: 1.4rem;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    margin-left: 3.1rem;
+    margin-top: 4.7rem;
+    margin-bottom: 4.7rem;
+    }
 }
 
 @media screen and (min-width: 1200px) {
@@ -2374,7 +2402,13 @@ margin-bottom: 4.7rem;
     margin-left: 3rem;
   }
   .about-second-grid {
-    margin-left: 10.4rem;
+    margin-left: 5.4rem;
+    font-size: 2.2rem;
+    margin-top: 7.2rem;
+    margin-bottom: 7.2rem;
+  }
+  .about-second-grid-two {
+    margin-left: 2.4rem;
     font-size: 2.2rem;
     margin-top: 7.2rem;
     margin-bottom: 7.2rem;
@@ -2397,7 +2431,7 @@ margin-bottom: 4.7rem;
     margin-bottom: 7.2rem;
   }
   .twitter {
-    margin-left: 15.1rem;
+    margin-left: 10.1rem;
     margin-top: 7rem;
   }
   .telegram-div {
@@ -2866,7 +2900,56 @@ margin-bottom: 4.7rem;
   box-shadow: 0 0 1rem rgba(0, 0, 0, 0.3)
 }
 
+.product:hover {
+  color: var(--yellow-color);
+  transition: 0.6s;
+  transform: scale(110%) rotate(5deg);
+  box-shadow: 0 0 1rem rgba(0, 0, 0, 0.3)
+}
+
+.product-forma:hover {
+  color: var(--yellow-color);
+  transition: 0.6s;
+  transform: scale(110%) rotate(5deg);
+  box-shadow: 0 0 1rem rgba(0, 0, 0, 0.3)
+}
+
+.product-jobs:hover {
+  color: var(--yellow-color);
+  transition: 0.6s;
+  transform: scale(110%) rotate(5deg);
+  box-shadow: 0 0 1rem rgba(0, 0, 0, 0.3)
+}
+
 .about-second-grid:hover {
+  color: var(--yellow-color);
+  transition: 0.6s;
+  transform: scale(110%) rotate(5deg);
+  box-shadow: 0 0 1rem rgba(0, 0, 0, 0.3)
+}
+
+.about-second-grid-two:hover {
+  color: var(--yellow-color);
+  transition: 0.6s;
+  transform: scale(110%) rotate(5deg);
+  box-shadow: 0 0 1rem rgba(0, 0, 0, 0.3)
+}
+
+.watch:hover {
+  color: var(--yellow-color);
+  transition: 0.6s;
+  transform: scale(110%) rotate(5deg);
+  box-shadow: 0 0 1rem rgba(0, 0, 0, 0.3)
+}
+
+.read:hover {
+  color: var(--yellow-color);
+  transition: 0.6s;
+  transform: scale(110%) rotate(5deg);
+  box-shadow: 0 0 1rem rgba(0, 0, 0, 0.3)
+}
+
+.listen:hover {
   color: var(--yellow-color);
   transition: 0.6s;
   transform: scale(110%) rotate(5deg);
@@ -2956,6 +3039,10 @@ margin-bottom: 4.7rem;
   outline: 0.2rem solid var(--for-table-blue);
 }
 
+.about:focus {
+  outline: 0.2rem solid var(--for-table-blue);
+}
+
 .Legal:focus {
   outline: 0.2rem solid var(--for-table-blue);
 }
@@ -2969,6 +3056,10 @@ margin-bottom: 4.7rem;
 }
 
 .about-second-grid:focus {
+  outline: 0.2rem solid var(--for-table-blue);
+}
+
+.about-second-grid-two:focus {
   outline: 0.2rem solid var(--for-table-blue);
 }
 
@@ -3038,6 +3129,8 @@ input[type="checkbox"]:checked + label {
 }
 
 .two-sides-card {
+  justify-self: center;
+  margin: auto;
   perspective: 100rem;
   width: 20rem;
   height: 30rem;
